# Frontier-Engineering

./: .env.example  .gitignore  AGENT.md  AGENTS.md  AGENT_zh-CN.md  CONTRIBUTING.md  CONTRIBUTING_zh-CN.md  README.md  README_ch.md  README_zh-CN.md  TASK_DETAILS.md  TASK_DETAILS_zh-CN.md  TASK_PROGRESS.md  TASK_PROGRESS_zh-CN.md  env_setup_report_20260416.md  frontier_eng_env_setup_report_2026-04-17_zh-CN.md  init.sh  iscso  pyproject.toml  pyrightconfig.json  ref.md  repo_onboarding_issues.txt  repro_2026-04-16_zh-CN.md  run.md  run.txt  run_en.md  run_zh-CN.md  test_pr.md
.github/: copilot-instructions.md
Astrodynamics/: README.md  README_ch.md  README_zh-CN.md
ElectronicDesignAutomation/: README.md  README_ch.md
baseline_archive/: README.md
best_code_only/: README.txt  coverage.json
docs/: agent_setup.md  agent_setup_zh-CN.md  baseline_validation_report_2026-04-24.md  repro_summary_2026-04-16_zh-CN.md  shinkaevolve_adapter_hardening_plan.md  uv_setup_zh-CN.md  uv_v1_envs_zh-CN.md  v1_task_run_guide_zh-CN.md  v2_task_runbook.md  v2_task_runbook_zh-CN.md
frontier_eval/: README.md  README_zh-CN.md  __init__.py  __main__.py  batch.py  cli.py  env.py  registry.py  registry_algorithms.py  registry_tasks.py  requirements-gpu.txt  requirements.txt  skill_cli.py
patches/: third_party_shinkaevolve.patch
reliable_sim/: CLAUDE.md  ORBGRAND.py  README.md  RM.py  SGRAND.py  chase.py  code_linear.py  decoder_analysis.py  distance_calculator.py  find_snr.py  hamming_simulation.py  plot_general.py  plot_results.py  run_experiment.py  sampler.py
scripts/: pr_review.py  (+23 more)
(+1606 files in other folders)
