[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "frontier-engineering"
version = "0.1.0"
description = "Frontier-Engineering evaluation framework and benchmark workspace."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.scripts]
frontier-eval = "frontier_eval.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["frontier_eval*"]

[tool.setuptools.package-data]
frontier_eval = ["conf/**/*.yaml", "conf/**/*.yml"]

[dependency-groups]
driver = [
  "hydra-core>=1.3.2,<2",
  "openevolve==0.2.26",
  "PyYAML>=6.0.0",
  "joblib>=1.5.2",
  "ulid-py>=1.1.0",
  "numpy",
  "pandas",
  "anndata",
  "scipy",
]
driver-torch = [
  "torch",
  "torchvision",
  "einops==0.8.1",
  "timm==1.0.21",
]
v1-main = [
  "anndata",
  "mqt.bench",
  "stockpyl",
  "job-shop-lib>=1.7,<2",
  "numpy>=1.26.0,<3.0.0",
  "scipy>=1.11.0,<2.0.0",
  "cvxpy>=1.4.0,<2.0.0",
  "PyPortfolioOpt>=1.5.6",
  "highspy>=1.8.0",
  "ecos>=2.0.14,<2.1.0",
  "osqp>=0.6.5",
  "scs>=3.2.7",
  "mujoco>=3.1.5",
  "pybullet>=3.2.6",
]
summit = [
  "numpy>=1.22,<2.0; python_version < '3.12'",
  "pandas>=1.5,<2.1; python_version < '3.12'",
  "joblib>=1.3; python_version < '3.12'",
  "scikit-learn>=1.3,<1.7; python_version < '3.12'",
  "summit==0.8.9; python_version < '3.12'",
]

[tool.uv]
default-groups = ["driver"]
